<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gitRepo.LandingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repositoryLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/repository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repository"
            android:textSize="18sp"
            android:paddingStart="15dp"
            android:textColor="@color/raisin_black"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repositoryList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/repository"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/repositoryEmptyLayout"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/repositoryEmptyView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="visible"
            android:src="@drawable/repository_empty_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/repositoryEmptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_repository_list_view"
            android:textColor="@color/raisin_black"
            android:fontFamily="@font/roboto_medium"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repositoryEmptyView"/>


        <Button
            android:id="@+id/addNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/add_now"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:backgroundTint="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repositoryEmptyText" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>